# idp-pipeline

./: .dockerignore  .env  Dockerfile  main.py  pyproject.toml
src/: app.py  config.py  extractor.py  models.py
